dist/filestash/Deployment.filestash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filestash
  namespace: filestash
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: filestash-app-filestash-app-deployment-c8dfe337
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: pvc-filestash-app-state
      labels:
        cdk8s.io/metadata.addr: filestash-app-filestash-app-deployment-c8dfe337
    spec:
      automountServiceAccountToken: false
      containers:
        - image: machines/filestash:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 8334
              scheme: HTTP
          name: filestash
          ports:
            - containerPort: 8334
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 8334
              scheme: HTTP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 192Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /app/data/state
              name: pvc-filestash-app-state
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-filestash-app-state
          persistentVolumeClaim:
            claimName: filestash-app-state
            readOnly: false
