dist/filestash/Ingress.filestash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: filestash
  namespace: filestash
spec:
  rules:
    - host: filestash.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: filestash
                port:
                  number: 8334
            path: /
            pathType: Prefix
    - host: files.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: filestash
                port:
                  number: 8334
            path: /
            pathType: Prefix
    - host: media.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: filestash
                port:
                  number: 8334
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - filestash.cmdcentral.xyz
        - files.cmdcentral.xyz
        - media.cmdcentral.xyz
      secretName: filestash-tls
